# a11yfix

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  baseline_inference.py  inference.py  openenv.yaml  pyproject.toml  reproducibility_report.py  requirements.txt  test_env.py
.github/: copilot-instructions.md
agents/: baseline_agent.py  optimal_agent.py
artifacts/: reproducibility_report.json
demo/: __init__.py  run_demo.py
env/: a11y_env.py  reward.py  violations.py
server/: app.py
tasks/: easy.py  hard.py  medium.py  run_all_tasks.py
tests/: test_inference_resilience.py  test_optimal_agent_tasks.py  test_regression_api.py
